# OpenTutor

./: .coveragerc  .dockerignore  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  OpenTutor-v3代码审计.md  Opentutor-Zenus-功能拆解-v3.md  README.md  README.zh-CN.md  SECURITY.md  Zenus-Agent-Core-Architecture.md  build-state.md  decision-log.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  fix_39.py  package-lock.json  package.json  playwright.config.ts  progress.txt  pytest.ini  railway.json  render.yaml  spec.md
apps/api/: .dockerignore  Dockerfile  alembic.ini  cli.py  config.py  database.py  main.py  pyproject.toml  requirements-core.txt  requirements-full.txt  requirements.txt
apps/api/alembic/: env.py
apps/api/config/: mcp_servers.yaml
apps/api/libs/: datetime_utils.py  encryption.py  exceptions.py  logging_setup.py  text_utils.py  url_validation.py
apps/api/middleware/: cost_matrix.py  csrf.py  metrics.py  security.py  sse_limiter.py  tracing.py
apps/api/models/: __init__.py  agenda_run.py  agent_kv.py  agent_task.py  audit_log.py  channel_binding.py  chat_message.py  chat_session.py  cognitive_baseline.py  compat.py  content.py  content_mutation.py  content_snapshot.py  course.py  drill.py  experiment.py  freeze_token.py  generated_asset.py  ingestion.py  integration_credential.py  intervention_outcome.py  interview.py  knowledge_graph.py  learning_event.py  learning_path.py  mastery_snapshot.py  memory.py  notification.py  notification_delivery.py  notification_settings.py  practice.py  preference.py  progress.py  push_subscription.py  report.py  scene.py  scrape.py  study_goal.py  study_habit.py  study_plan.py  (+5 more)
apps/api/plugins/: __init__.py  loader.py
apps/api/prompts/: exercise.md  planning.md  review.md  teaching.md  teaching_strategies.md
apps/api/routers/: agenda.py  auth.py  block_routes.py  canvas.py  chat.py  chat_helpers.py  content_mutations.py  courses.py  courses_crud.py  courses_sync.py  curriculum.py  drills.py  evaluation.py  experiments.py  export.py  flashcards.py  freeze.py  gamification.py  mcp.py  (+41 more)
(+1223 files in other folders)
