[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opentutor"
version = "0.1.0"
description = "OpenTutor Zenus — your local AI learning assistant"
readme = "../../README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
keywords = ["ai", "education", "learning", "tutor", "local-first"]

dependencies = [
    # Core
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "pydantic>=2.11.0,<3.0.0",
    "pydantic-settings>=2.7.0,<3.0.0",

    # Database core (PostgreSQL and SQLite supported)
    "sqlalchemy[asyncio]>=2.0.30",
    "aiosqlite>=0.20.0",

    # LLM (Ollama — zero-config local inference)
    "openai>=1.50.0",
    "httpx>=0.27.0",

    # Workflow
    "langgraph>=0.2.0",
    "langgraph-checkpoint-sqlite>=2.0.0",

    # File parsing
    "beautifulsoup4>=4.12.0",
    "python-pptx>=1.0.0",
    "python-docx>=1.1.0",
    "filetype>=1.2.0",

    # Utilities
    "tiktoken>=0.7.0",
    "xxhash>=3.4.0",
    "thefuzz>=0.22.0",
    "tenacity>=9.0.0",
    "python-dotenv>=1.0.0",
    "sse-starlette>=2.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
postgres = [
    "asyncpg>=0.29.0",
    "pgvector>=0.3.0",
    "langgraph-checkpoint-postgres>=3.0.0",
]
cloud = [
    "anthropic>=0.40.0",
]
full = [
    "opentutor[postgres,cloud]",
    "crawl4ai>=0.4.0",
    "trafilatura>=2.0.0",
    "python-magic>=0.4.27",
    "apscheduler>=3.10.0",
    "bcrypt>=4.0.0",
    "python-jose[cryptography]>=3.3.0",
    "redis>=5.2.0",
    "mcp>=1.0.0",
    "pluggy>=1.5.0",
    "tavily-python>=0.5.0",
    "genanki>=0.13.0",
    "icalendar>=6.0.0",
]

[project.scripts]
opentutor = "cli:main"

[tool.setuptools]
py-modules = [
    "cli",
    "database",
    "main",
]

[tool.setuptools.packages.find]
where = ["."]
include = [
    "config*",
    "models*",
    "routers*",
    "services*",
    "libs*",
    "middleware*",
    "schemas*",
    "skills*",
    "prompts*",
    "utils*",
]
exclude = ["tests*", "alembic*", "uploads*", "sessions*", "plugins*"]
